--- a/Randomization_simulation_methods/3.1-ComplexModels.qmd
+++ b/Randomization_simulation_methods/3.1-ComplexModels.qmd
@@ -67,7 +67,7 @@ MM <- MM %>% mutate(pred4 = predict(fm4))
 ggplot(MM, aes(x = Mass, y = Energy, color = Caste)) +
   geom_point(size = 4) +
   geom_line(aes(x = Mass, y = pred4, color = Caste), lwd = 2) +
-  theme(legend.justification = c(0, 1), legend.position = c(0, 1)) +
+  theme(legend.justification = c(0, 1), legend.position = c(00.05, 1)) +
   labs(x = "ln Body Mass (g)", y = "ln Daily Energy Expenditure (kJ)") +
   scale_color_viridis_d()
 
@@ -79,12 +79,10 @@ ggplot(MM, aes(x = Mass, y = Energy, color = Caste)) +
     - Randomize Y to all existing combinations of predictors
     - Keeps relationships between predictors
     - Accounts for any issues with distribution of Y
-    
 2. Restricted Randomization for each predictor 
     - Only randomize one predictor at a time
     - Keeps effect of the other predictors accounted for
     - Isolates testing for the effect of the focal predictor
-
 3. Randomize Residuals     
     - Replace observations with their corresponding residual
     - Allows the effects of individual factors and interactions to be tested after removing the effects of other factors and interactions
@@ -111,7 +109,7 @@ MM.shuffle <- MM.shuffle %>% mutate(pred4 = predict(fm4))
 ggplot(MM.shuffle, aes(x = Mass, y = Energy, color = Caste)) +
   geom_point(size = 4) +
   geom_line(aes(x = Mass, y = pred4, color = Caste), lwd = 2) +
-  theme(legend.justification = c(0, 1), legend.position = c(0, 1)) +
+  theme(legend.justification = c(0, 1), legend.position = c(0.05, 1)) +
   labs(x = "ln Body Mass (g)", y = "ln Daily Energy Expenditure (kJ)") +
   scale_color_viridis_d()
 
@@ -136,7 +134,7 @@ MM.shuffle <- MM.shuffle %>% mutate(pred4 = predict(fm4))
 ggplot(MM.shuffle, aes(x = Mass, y = Energy, color = Caste)) +
   geom_point(size = 4) +
   geom_line(aes(x = Mass, y = pred4, color = Caste), lwd = 2) +
-  theme(legend.justification = c(0, 1), legend.position = c(0, 1)) +
+  theme(legend.justification = c(0, 1), legend.position = c(0.05, 1)) +
   labs(x = "ln Body Mass (g)", y = "ln Daily Energy Expenditure (kJ)") +
   scale_color_viridis_d()
 
@@ -150,10 +148,9 @@ ggplot(MM.shuffle, aes(x = Mass, y = Energy, color = Caste)) +
 fm4 <- lm(Energy ~ Mass + Caste, data = MM)
 broom::tidy(summary(fm4))
 
-obs <- broom::tidy(summary(fm4))[2:3,c(1,5)]
+obs <- broom::tidy(summary(fm4))[2:3, c(1, 5)]
 
 obs
-
 ```
 
 ## Perform Randomization
@@ -163,40 +160,35 @@ obs
 
 niter <- 1000
 MM.shuffle <- MM
-out.ps <- tibble("term" = rep(NA, niter*2), 
-                 "p.value" = rep(NA, niter*2))
-out.ps[1:2,] <- obs
+out.ps <- tibble("term" = rep(NA, niter * 2), 
+                 "p.value" = rep(NA, niter * 2))
+out.ps[1:2, ] <- obs
 counter <- 3
-for(ii in 2:niter)
-{
+for (ii in 2:niter) {
   
-MM.shuffle$Energy <- sample(MM$Energy)
-
-fm.s <- lm(Energy ~ Mass + Caste, data = MM.shuffle)
-
-out.ps[counter:(counter + 1),] <- broom::tidy(summary(fm.s))[2:3,c(1,5)]
-counter <- counter + 2
+  MM.shuffle$Energy <- sample(MM$Energy)
+  
+  fm.s <- lm(Energy ~ Mass + Caste, data = MM.shuffle)
+  
+  out.ps[counter:(counter + 1), ] <- broom::tidy(summary(fm.s))[2:3, c(1, 5)]
+  counter <- counter + 2
 }
-
 ```
 
 ## Visualize Randomizations
 
 ```{r}
-
 out.ps |>
   ggplot(aes(p.value)) +
   geom_histogram(fill = "grey75", bins = 100) +
-  geom_vline(data=obs, aes(xintercept = p.value), color="firebrick4") +
-  facet_grid(term~.)
-
+  geom_vline(data = obs, aes(xintercept = p.value), color = "firebrick4") +
+  facet_grid(term ~ .)
 ```
 
 ## Empirical P-Values
 
 ```{r}
 #| echo: true
-
 
 out.ps |>
   filter(term == "Mass") |>
@@ -208,14 +200,14 @@ out.ps |>
 
 ```
 
-## Multi-level Models & Exchangability
+## Multi-level Models & Exchangeability
 
 Randomization assumes
 
 - IDD 
-- Exchangability of observations under the null hypothesis
-- Grouping variables will often change the unit of exchangability
-    - e.g. paired t-test has a multiple groupings: a treatment category and a pair id category
+- Exchangeability of observations under the null hypothesis
+- Grouping variables will often change the unit of exchangeability
+    - e.g., paired *t*-test has a multiple groupings: a treatment category and a pair id category
 
 See [Anderson & Ter Braak 2003](https://www.tandfonline.com/doi/abs/10.1080/00949650215733) on Canvas
 
@@ -228,8 +220,8 @@ Does EE2 exposure affect hatchling length?
 - Observations are not exchangable across sibling groups
 - Randomize treatment and control within sibling groups
 
-## Ethynylestradiol exposure in brown trout (*Salmo trutta*) {.smaller}
 
+## Ethynylestradiol exposure in brown trout (*Salmo trutta*) {.smaller}
 
 ```{r}
 #| echo: true
@@ -242,13 +234,12 @@ RR <- read_excel("Data/Embryos_EE2.xlsx") |>
 mod <- lme(Length1_mm ~ Treatment, random = ~ 1 | Sibgroup, data = RR)
 
 summary(mod)
-
 ```
 
 ## Randomize within sib groups {.smaller}
+
 ```{r}
 set.seed(727383)
-
 ```
 
 ```{r}
@@ -259,35 +250,33 @@ RR.s <- RR |> group_by(Sibgroup) |>
   mutate(Treatment.s = sample(Treatment))
 
 #family 1
-RR.s[RR.s$Sibgroup==sibg[1],c(1,3,4,5)]
+RR.s[RR.s$Sibgroup == sibg[1], c(1, 3, 4, 5)]
 
 #family 2
-RR.s[RR.s$Sibgroup==sibg[2],c(1,3,4,5)]
-
+RR.s[RR.s$Sibgroup == sibg[2], c(1, 3, 4, 5)]
 ```
 
-## Randomize within sib groups 
+
+## Randomize within sib groups
 
 - Limited combinations within sib groups but many possible across the dataset
 
 ```{r}
 #| echo: true
 
-obs <- summary(mod)$tTable[2,4]
+obs <- summary(mod)$tTable[2, 4]
 
 niter <- 1000
-output <- tibble("ts" = rep(NA,niter))
+output <- tibble("ts" = rep(NA, niter))
 output$ts[1] <- obs
-for(ii in 2:niter)
-{
+for (ii in 2:niter) {
   RR.s <- RR |> group_by(Sibgroup) |>
     mutate(Treatment.s = sample(Treatment))
   mod <- lme(Length1_mm ~ Treatment.s, random = ~ 1 | Sibgroup, data = RR.s)
-  output$ts[ii] <- summary(mod)$tTable[2,4]
-  
+  output$ts[ii] <- summary(mod)$tTable[2, 4]
 }
-
 ```
+
 
 ## Visualize Randomizations
 
@@ -298,9 +287,11 @@ output |>
   ggplot(aes(ts)) +
   geom_histogram(fill = "grey75") +
   geom_vline(xintercept = c(-obs,obs), color = "firebrick4", linewidth = 2) +
-  annotate("text", x = -2.5, y = 60, label = paste0("P = ",round(empp,4)), size = 6)
-
+  annotate("text", x = -2.5, y = 60,
+           label = paste0("P = ", round(empp, 4)),
+           size = 6)
 ```
+
 
 ## General Considerations
 
